--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -15,3 +15,39 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+/*Footer style */
+.footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-top: 2px solid green;
+    padding: 2rem 0rem 2rem 2rem;
+
+    box-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px white, 0 0 5px green, 0 0 7px greenyellow;
+}
+
+.copyright{
+    padding: 0.5rem;
+    margin-right: 1rem;
+    border-radius: 1.5rem;
+}
+
+.link {
+    flex-grow: 1;
+}
+.link a{
+    text-decoration: none;
+    color:black;
+    padding: 0.5rem;
+    border: 2px solid green;
+    background-color: green;
+    border-radius: 0.25rem;
+    transition-duration: 0.5s;
+}
+.link a:hover{
+    color:green;
+    padding: 0.5rem;
+    background-color: transparent;
+    box-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px green;
+}
