--- a/resources/css/animation.css
+++ b/resources/css/animation.css
@@ -95,6 +95,14 @@
 #a6 { animation: textLightning 3s infinite linear 1.5s}
 #a8 { animation: textLightning 3s infinite linear 1.5s}
 #a10 { animation: textLightning 3s infinite linear 1.5s}
+
+#b1 { animation: textLightning 3s infinite linear}
+#b2 { animation: textLightning 3s infinite linear 200ms}
+#b3 { animation: textLightning 3s infinite linear 400ms}
+#b4 { animation: textLightning 3s infinite linear 600ms}
+#b5 { animation: textLightning 3s infinite linear 800ms}
+#b6 { animation: textLightning 3s infinite linear 1s}
+
 @keyframes textLightning {
     50%{ text-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px white, 0 0 5px green, 0 0 8px green, 0 0 10px greenyellow;
     color: greenyellow}
