--- a/resources/css/animation.css
+++ b/resources/css/animation.css
@@ -152,3 +152,32 @@
     75%{transform: rotate(270deg)}
     100%{transform: rotate(1800deg)}
 }
+
+#team1{animation: team 30s infinite linear;}
+#team2{animation: team 30s infinite linear 0.2s;}
+#team3{animation: team 30s infinite linear 0.4s;}
+#team4{animation: team 30s infinite linear 0.6s;}
+
+@keyframes team {
+    10%{color: green;
+    text-shadow: 0 0 1px white, 0 0 3px white, 0 0 5px green, 0 0 7px green;}
+    20%{color: transparent;
+    text-shadow: none;}
+    30%{color: greenyellow;
+    text-shadow: 0 0 1px white, 0 0 3px white, 0 0 5px greenyellow, 0 0 7px greenyellow;}
+    40%{color: transparent;
+    text-shadow: none;}
+    50%{color: orange;
+    text-shadow: 0 0 1px white, 0 0 3px white, 0 0 5px orange, 0 0 7px orange;}
+    60%{color: transparent;
+    text-shadow: none;}
+    70%{color: orangered;
+    text-shadow: 0 0 1px white, 0 0 3px white, 0 0 5px orangered, 0 0 7px orangered;}
+    80%{color: transparent;
+    text-shadow: none;}
+    90%{color: red;
+    text-shadow: 0 0 1px white, 0 0 3px white, 0 0 5px red, 0 0 7px red;}
+    100%{color: transparent;
+    text-shadow: none;}
+    
+}
