--- a/resources/css/body.css
+++ b/resources/css/body.css
@@ -73,7 +73,6 @@
 
 .info {
     width: 40%;
-  
     border: 3px solid orangered;
     border-radius: 2rem;
     margin: 2rem;
@@ -322,4 +321,306 @@
     font-size: 2rem;
     font-weight: 700;
     text-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px green, 0 0 5px green, 0 0 7px greenyellow;
+}
+
+@media only screen and (max-width: 1200px) {
+    .introduction {
+        border: 4px solid rgba(56, 15, 0, 0.562);
+        border-radius: 1rem 1rem 0 0;
+        margin: 0 2rem;
+        border-bottom: transparent;
+    }
+    .introduction img {
+        width: 20rem;
+        height: 10rem;
+        border: 2px solid rgb(255, 116, 65);
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 5px orange, 0 0 8px orangered;
+        border-radius: 1rem;
+        margin: 1rem;
+    }
+    .introduction h1{
+        font-size: 1.5rem;
+        color: orange;
+        margin: 0 8rem;
+    }
+
+    .introduction2 {
+        border: 4px solid rgba(56, 15, 0, 0.562);
+        margin: 0.5rem 2rem;
+        border-top: transparent;
+        border-radius: 0 0 1rem 1rem;
+    }
+    .introduction2 img {
+        width: 20rem;
+        height: 10rem;
+        border-radius: 1rem;
+        margin: 1rem;
+    }
+    .introduction2 h1{
+        font-size: 1.5rem;
+        color: orangered;
+        margin: 0 8rem;
+    }
+    .introduction3 {
+        margin: 0 2rem;
+    }
+    .info, .info2 {
+        width: 40%;
+        border: 2px solid orangered;
+        border-radius: 1rem;
+        margin: 1rem;
+    }
+    .info2{
+        width:60%
+    }
+    .info img, .info2 img{
+        width: 8rem;
+        height: 10rem;
+        margin: 0.75rem;
+    }
+    .info p, .info2 p{
+        font-size: 1.25rem;
+        margin: 0.75rem;
+    }
+    .partner h1{
+      font-size: 1.5rem;
+    }
+    .partner-icon img {
+        width: 5rem;
+        height: 5rem;
+        margin: 0.5rem;
+        border: 2px solid green;
+        border-radius: 0.75rem;
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px white, 0 0 6px green, 0 0 8px green, 0 0 10px greenyellow;
+    }
+    .collection-banner h1{
+        font-size: 2rem;
+    }
+    .collection-banner img {
+        width:24rem;
+        height:10rem;
+        border: 2px solid orangered;
+        border-radius: 1rem;
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px white, 0 0 6px orangered, 0 0 8px red;
+    }
+    .undead {
+        margin-top: 1rem;
+    }
+    .undead img{
+        width: 7.5rem;
+        height: 7.5rem;
+        border-radius: 1.5rem;
+    }
+    .undead h2, .founderpass h2{
+        border: 2px solid orangered;
+        border-radius: 0.75rem;
+        padding: 0.75rem;
+        margin: 0.5rem;
+        font-size: 1rem;
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px white, 0 0 6px orangered, 0 0 8px red;
+        text-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px orangered, 0 0 5px red;
+    }
+    .undead a h2:hover, .founderpass a h2:hover{
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px white, 0 0 6px orangered, 0 0 8px orangered, 0 0 10px red;
+    }
+    .founderpass {
+        margin-top: 1.5rem;
+    }
+    .founderpass img {
+        width: 7.5rem;
+        height: 7.5rem;
+        border: 2px solid black;
+        border-radius: 3rem;
+        box-shadow: 0 0 1px black, 0 0 3px rgb(37, 37, 37), 0 0 5px rgb(83, 83, 83), 0 0 8px rgb(194, 194, 194), 0 0 10px rgb(255, 255, 255);
+    }
+    .founderpass a {
+        margin-top: 0.75rem;
+    }
+    .game-icon img{
+        width: 20rem;
+        height: 24rem;
+    }
+    .game-intro h1{
+        font-size: 2rem;
+        margin: 0 3rem;
+    }
+    #game {
+        width: 20rem;
+        height: 20rem;
+        border: 2px solid green;
+    }
+    
+    .game-info p{
+        font-size: 1.5rem;
+        text-align: center;
+        margin: 0 3rem;
+    }
+    .sub-nav ul li{
+        border: 2px solid green;
+        padding: 0.5rem;
+        margin: 0.25rem;
+        border-radius: 0.75rem;
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px white, 0 0 6px green, 0 0 8px greenyellow;
+        transition-duration: 1s;
+    }
+    .sub-nav ul li:hover {
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px white, 0 0 6px white, 0 0 8px green, 0 0 10px greenyellow;
+    }
+    .sub-nav a {
+        color: green;
+        font-size: 1.5rem;
+        font-weight: 600;
+        text-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px green, 0 0 5px greenyellow;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .introduction {
+        border: 3px solid rgba(56, 15, 0, 0.562);
+        border-radius: 0.5rem 0.5rem 0 0;
+        margin: 0 0.5rem;
+        border-bottom: transparent;
+    }
+    .introduction img {
+        width: 14rem;
+        height: 7rem;
+        border: 1px solid rgb(255, 116, 65);
+        box-shadow: 0 0 1px white, 0 0 2px white, 0 0 4px orange, 0 0 6px orangered;
+        border-radius: 0.5rem;
+        margin: 0.5rem;
+    }
+    .introduction h1{
+        font-size: 1rem;
+        color: orange;
+        margin: 0 1rem;
+    }
+    .introduction2 {
+        border: 3px solid rgba(56, 15, 0, 0.562);
+        margin: 0.5rem 0.5rem;
+        border-top: transparent;
+        border-radius: 0 0 0.5rem 0.5rem;
+    }
+    .introduction2 img {
+        width: 14rem;
+        height: 7rem;
+        border-radius: 0.5rem;
+        margin: 0.5rem;
+        box-shadow: 0 0 1px white, 0 0 2px white, 0 0 4px orange, 0 0 6px orangered;
+        border: 1px solid burlywood;
+    }
+    .introduction2 h1{
+        font-size: 1rem;
+        color: orangered;
+        margin: 0 3rem;
+    }
+    .introduction3 {
+        margin: 0;
+    }
+    .info, .info2 {
+        border-radius: 0.4rem;
+        margin: 0.25rem;
+    }
+    .info {
+        width: 45%;
+    }
+    .info2{
+        width:80%
+    }
+    .info img, .info2 img{
+        width: 5.5rem;
+        height: 7.5rem;
+        margin: 0.4rem;
+    }
+    .info p, .info2 p{
+        font-size: 0.8rem;
+        margin: 0.25rem;
+    }
+    .partner h1{
+      font-size: 1rem;
+    }
+    .partner-icon img {
+        width: 2.5rem;
+        height: 2.5rem;
+        margin: 0.1rem;
+        border: 1px solid green;
+        border-radius: 0.5rem;
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px green, 0 0 6px greenyellow;
+    }
+    .collection-banner h1{
+        font-size: 1.5rem;
+    }
+    .collection-banner img {
+        width:20rem;
+        height:9rem;
+        border: 2px solid orangered;
+        border-radius: 1rem;
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px orangered, 0 0 6px red;
+    }
+    .undead {
+        margin-top: 0.5rem;
+    }
+    .undead img{
+        width: 5rem;
+        height: 5rem;
+        border-radius: 1rem;
+    }
+    .undead h2, .founderpass h2{
+        border: 1px solid orangered;
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+        margin: 0.25rem;
+        font-size: 0.8rem;
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px orangered, 0 0 6px red;
+        text-shadow: 0 0 1px white, 0 0 2px red;
+    }
+    .undead a h2:hover, .founderpass a h2:hover{
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px orangered, 0 0 6px red;
+    }
+    .founderpass {
+        margin-top: 1rem;
+    }
+    .founderpass img {
+        width: 5rem;
+        height: 5rem;
+        border: 1px solid black;
+        border-radius: 1rem;
+        box-shadow: 0 0 1px black, 0 0 3px rgb(37, 37, 37), 0 0 5px rgb(83, 83, 83), 0 0 8px rgb(194, 194, 194);
+    }
+    .founderpass a {
+        margin-top: 0.5rem;
+    }
+    .game-icon img{
+        width: 16rem;
+        height: 20rem;
+    }
+    .game-intro h1{
+        font-size: 1.5rem;
+        margin: 0 2rem;
+    }
+    #game {
+        width: 15rem;
+        height: 15rem;
+        border: 2px solid green;
+    }
+    
+    .game-info p{
+        font-size: 1rem;
+        margin: 0 1rem;
+    }
+    .sub-nav ul li{
+        border: 2px solid green;
+        padding: 0.25rem;
+        margin: 0.1rem;
+        border-radius: 0.5rem;
+        box-shadow: 0 0 1px white, 0 0 3px green, 0 0 4px greenyellow;
+        transition-duration: 1s;
+    }
+    .sub-nav ul li:hover {
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 4px white, 0 0 6px white, 0 0 8px green, 0 0 10px greenyellow;
+    }
+    .sub-nav a {
+        color: green;
+        font-size: 1rem;
+        text-shadow: 0 0 1px white, 0 0 2px green, 0 0 3px greenyellow;
+    }
 }
