--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -34,11 +34,13 @@ header {
 
 .navigation ul {
     display: flex;
+    justify-content: center;
     margin: 1rem;
 }
 
 .navigation ul li {
     display: flex;
+    justify-content: center;
     padding: 0.5rem;
     margin: 0.5rem;
     border: 2px solid transparent;
@@ -74,3 +76,85 @@ header {
 #social2 {
     margin-right: 2rem;
 }
+
+#navigation {
+    border: none;
+    box-shadow: none;
+    display: none;
+}
+@media only screen and (max-width: 1200px) {
+    .logo-name img {
+        width: 5rem;
+        height: 5rem;
+        margin: 1rem;
+    }
+    .logo-name h1 {
+        font-size: 1.25rem;
+    }
+
+    .navigation {
+        margin: 0.75rem 2rem;
+    }
+
+    .navigation ul{
+        margin: 0.5rem;
+    }
+
+    .navigation ul li {
+        padding: 0.25rem;
+        margin: 0.25rem;
+    }
+
+    .navigation ul li a {
+        font-size: 1rem;
+    }
+
+    .social img {
+        width:2rem;
+        height: 2rem;
+        border-radius: 0.5rem;
+        margin: 0.25rem;
+    }
+    #social2 {
+        margin-right: 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    header {
+        border-bottom: 2px solid green;
+        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 5px green, 0 0 7px greenyellow;
+    }
+    .logo-name {
+        flex-grow: 1;
+        justify-content: flex-start;
+    }
+    .logo-name img {
+        width: 4rem;
+        height: 4rem;
+        margin: 0.75rem;
+    }
+    .logo-name h1 {
+        font-size: 1rem;
+
+    }
+
+    .navigation {
+        display: none;
+    }
+    .social img {
+        width:1.75rem;
+        height: 1.75rem;
+        border-radius: 0.5rem;
+        margin: 0.25rem;
+    }
+    #social2 {
+        margin-right: 1.25rem;
+    }
+
+    #navigation {
+        display:block;
+        margin: 0;
+    }
+}
+
