--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -122,8 +122,8 @@ header {
 
 @media only screen and (max-width: 900px) {
     header {
-        border-bottom: 2px solid green;
-        box-shadow: 0 0 1px white, 0 0 3px white, 0 0 5px green, 0 0 7px greenyellow;
+        border-bottom: 1px solid green;
+        box-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px green, 0 0 5px greenyellow;
     }
     .logo-name {
         flex-grow: 1;
@@ -136,7 +136,6 @@ header {
     }
     .logo-name h1 {
         font-size: 1rem;
-
     }
 
     .navigation {
@@ -155,6 +154,28 @@ header {
     #navigation {
         display:block;
         margin: 0;
+    }
+}
+@media only screen and (max-width: 550px) {
+
+    .logo-name img {
+        width: 3rem;
+        height: 3rem;
+        margin: 0.5rem;
+    }
+    .logo-name h1 {
+        font-size: 0.75rem;
+    }
+    .social img {
+        width:1.3rem;
+        height: 1.3rem;
+        border-radius: 0.3rem;
+        margin: 0.2rem;
+        border: 1px solid green;
+        box-shadow: 0 0 1px white, 0 0 2px white,0 0 3px green, 0 0 4px greenyellow;
+    }
+    #social2 {
+        margin-right: 0.8rem;
     }
 }
 
