--- a/resources/css/disclaimer.css
+++ b/resources/css/disclaimer.css
@@ -16,3 +16,51 @@
     padding: 2rem;
     margin: 5rem;
 }
+
+@media only screen and (max-width: 1200px){
+
+    
+    .disclaimer-intro img {
+        width: 24rem;
+        height: 8rem;
+    }
+    .disclaimer-intro h1{
+        font-size: 1.5rem;
+    }
+    .disclaimer {
+        border: 4px solid green;
+        border-radius: 1.5rem;
+        padding: 1rem;
+        margin: 2rem;
+    }
+    .disclaimer h2 {
+        font-size: 1.25rem;
+    }
+    .disclaimer p {
+        font-size: 0.8rem;
+    }
+}
+
+@media only screen and (max-width: 550px){
+
+    
+    .disclaimer-intro img {
+        width: 16.8rem;
+        height: 5.6rem;
+    }
+    .disclaimer-intro h1{
+        font-size: 1.25rem;
+    }
+    .disclaimer {
+        border: 3px solid green;
+        border-radius: 1.25rem;
+        padding: 0.5rem;
+        margin: 1rem;
+    }
+    .disclaimer h2 {
+        font-size: 1rem;
+    }
+    .disclaimer p {
+        font-size: 0.8rem;
+    }
+}
